<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".userprofile.fragment.Address_Fragment">
    <TextView
        android:id="@+id/addtextview"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/btnback"
        android:textStyle="bold"
        android:background="@drawable/whiteback"
        android:text="+ ADD NEW ADDRESS"
        android:textSize="25dp" />

    <ScrollView
        android:visibility="gone"
        android:id="@+id/visivlschreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="    Name"  />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:id="@+id/useremail"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="    Email"  />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_contact_phone_black_24dp"
                android:id="@+id/userPhoneNumber"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="   Phone no"  />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_weight="1"
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_fiber_pin_black_24dp"
                android:id="@+id/AddresPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLength="12"
                android:inputType="text"
                android:hint="   Pincode" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/AddresState"
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_pin_drop_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLength="12"
                android:inputType="text"
                android:hint="   State" />
        </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/fullAddres"
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_pin_drop_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLength="12"
                android:inputType="text"
                android:hint="@string/fulladdress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/Localety"
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_location_city_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLength="12"
                android:inputType="text"
                android:hint="Locality/Town*" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/CityDistric"
                android:padding="5dp"
                android:drawableLeft="@drawable/ic_location_city_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLength="12"
                android:inputType="text"
                android:hint="City/District*" />
        </com.google.android.material.textfield.TextInputLayout>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/type_of_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_weight="1"
            android:text="Home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_weight="1"
            android:text="Office"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <CheckBox
        android:text="@string/open_on_saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:text="@string/open_on_sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <CheckBox
        android:text="@string/defult_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
        <Button
            android:layout_gravity="center"
            android:background="@drawable/buttonback"
            android:gravity="center"
            android:id="@+id/registationcomp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="Save" />
    </LinearLayout>
</ScrollView>
</FrameLayout>