<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/White"
    android:layout_height="200dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:scaleType="centerCrop"
                android:background="@color/White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/shop"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:text="@string/producte_name"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="3"
                    android:textColor="@color/gray"
                    android:text="@string/sold_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_weight="1"
                    android:textColor="@color/gray"
                    android:text="Alam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="start"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="Size"
                    android:textSize="15dp"
                    android:textColor="@color/btnback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_weight="1"
                    android:id="@+id/producetsize"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:entries="@array/size"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="Qty"
                    android:textSize="15dp"
                    android:textColor="@color/btnback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_weight="1"
                    android:id="@+id/producolor"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:entries="@array/qty"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="Rs"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="200"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="10%"
                    android:textSize="15dp"
                    android:textColor="@color/gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@color/Red"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="OFF"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="start"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_margin="2dp"
                    android:background="@drawable/topbacground"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="@string/remove"
                    android:textSize="15dp"
                    android:textColor="@color/gray"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>